// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProductListItem Component > creates correct product detail link 1`] = `
<DocumentFragment>
  <div
    class="product-listing-item"
  >
    <div
      class="product-listing-info"
    >
      <h3
        class="product-listing-title"
      >
        Test Product
      </h3>
      <div
        class="product-listing-details"
      >
        <span
          class="price"
        >
          $99.99
        </span>
        <span
          class="category-badge"
        >
          test category
        </span>
      </div>
    </div>
    <a
      class="product-details-btn"
      data-discover="true"
      href="/product-detail/test-product"
    >
      Product Details
    </a>
  </div>
</DocumentFragment>
`;

exports[`ProductListItem Component > dispatches setProductDetails action when clicking detail link 1`] = `
<DocumentFragment>
  <div
    class="product-listing-item"
  >
    <div
      class="product-listing-info"
    >
      <h3
        class="product-listing-title"
      >
        Test Product
      </h3>
      <div
        class="product-listing-details"
      >
        <span
          class="price"
        >
          $99.99
        </span>
        <span
          class="category-badge"
        >
          test category
        </span>
      </div>
    </div>
    <a
      class="product-details-btn"
      data-discover="true"
      href="/product-detail/test-product"
    >
      Product Details
    </a>
  </div>
</DocumentFragment>
`;

exports[`ProductListItem Component > formats category text correctly 1`] = `
<DocumentFragment>
  <div
    class="product-listing-item"
  >
    <div
      class="product-listing-info"
    >
      <h3
        class="product-listing-title"
      >
        Test Product
      </h3>
      <div
        class="product-listing-details"
      >
        <span
          class="price"
        >
          $99.99
        </span>
        <span
          class="category-badge"
        >
          test category name
        </span>
      </div>
    </div>
    <a
      class="product-details-btn"
      data-discover="true"
      href="/product-detail/test-product"
    >
      Product Details
    </a>
  </div>
</DocumentFragment>
`;

exports[`ProductListItem Component > renders product information correctly 1`] = `
<DocumentFragment>
  <div
    class="product-listing-item"
  >
    <div
      class="product-listing-info"
    >
      <h3
        class="product-listing-title"
      >
        Test Product
      </h3>
      <div
        class="product-listing-details"
      >
        <span
          class="price"
        >
          $99.99
        </span>
        <span
          class="category-badge"
        >
          test category
        </span>
      </div>
    </div>
    <a
      class="product-details-btn"
      data-discover="true"
      href="/product-detail/test-product"
    >
      Product Details
    </a>
  </div>
</DocumentFragment>
`;
